# qcodeeditor

./: CMakeLists.txt  cpp.json
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  qcodeeditor.cpp  qcodeeditor.hpp  qcodeeditor_line_numbers_area.cpp  qcodeeditor_line_numbers_area.hpp  qsyntax_highlighter.cpp  qsyntax_highlighter.hpp
src/syntaxer/: CMakeLists.txt  main.cpp  theme.cpp  theme.hpp
